loc-api: Merging Makefiles of libloc_api_50001 and loc_api_v02
Created a new Makefile.am that builds both libloc_api_50001
and loc_api_v02

Change-Id: I20960f1c087c9a6bf721ea3e25369590f5b2ce85

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = utils loc_api/libloc_api_50001 loc_api/loc_api_v02
+SUBDIRS = utils loc_api
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = loc-api.pc
