--- a/etc/gps.conf
+++ b/etc/gps.conf
@@ -64,6 +64,14 @@ CAPABILITIES=0x37
 # C2K_HOST=c2k.pde.com or IP
 # C2K_PORT=1234
 
+# Bitmask of slots that are available
+# for write/install to, where 1s indicate writable,
+# and the default value is 0 where no slots
+# are writable. For example, AGPS_CERT_WRITABLE_MASK
+# of b1000001010 makes 3 slots available
+# and the remaining 7 slots unwritable.
+#AGPS_CERT_WRITABLE_MASK=0
+
 ####################################
 #  LTE Positioning Profile Settings
 ####################################
