loc-hal:porting from ANDROID_LNX.LA.3.5.1_RB1.04.04.02.048.040
It contains the following changes:
- porting from AU_LINUX_ANDROID_LNX.LA.3.5.1_RB1.04.04.02.048.040
- updated package loc-api files according to the merge
- rename loc-api to loc-hal
- dynamically load liblbs_core.so.1 file for LE platforms
- print a warning message when loading the lbs_core library fails

CRs-fixed: 605821

Change-Id: I54e1a9c742d1734ffa29e6864901119e0ee600c8

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -5,22 +5,29 @@ AM_CFLAGS = -Wundef \
          -fno-inline \
          -fno-short-enums \
          -fpic \
+         -I./ \
          -I../platform_lib_abstractions
 
-libgps_utils_so_la_h_sources = log_util.h \
-            msg_q.h \
-            linked_list.h \
-            loc_cfg.h \
-            loc_log.h \
-            ../platform_lib_abstractions/platform_lib_includes.h \
-            ../platform_lib_abstractions/platform_lib_time.h \
-            ../platform_lib_abstractions/platform_lib_macros.h
+libgps_utils_so_la_h_sources = \
+        log_util.h \
+        msg_q.h \
+        linked_list.h \
+        loc_cfg.h \
+        loc_log.h \
+        loc_target.h \
+        loc_timer.h \
+        ../platform_lib_abstractions/platform_lib_includes.h \
+        ../platform_lib_abstractions/platform_lib_time.h \
+        ../platform_lib_abstractions/platform_lib_macros.h
 
-libgps_utils_so_la_c_sources = linked_list.c \
-            msg_q.c \
-            loc_cfg.cpp \
-            loc_log.cpp \
-            ../platform_lib_abstractions/platform_lib_time.cpp
+libgps_utils_so_la_c_sources = \
+        linked_list.c \
+        msg_q.c \
+        loc_cfg.cpp \
+        loc_log.cpp \
+        loc_timer.c \
+        loc_target.cpp \
+        ../platform_lib_abstractions/platform_lib_time.cpp
 
 library_includedir = $(pkgincludedir)/utils
 
@@ -38,7 +45,7 @@ libgps_utils_so_la_LDFLAGS = -lpthread -shared -version-info 1:0:0
 libgps_utils_so_la_CPPFLAGS = $(AM_CFLAGS) $(AM_CPPFLAGS)
 endif
 
-libgps_utils_so_la_LIBADD = -lstdc++
+libgps_utils_so_la_LIBADD = -lstdc++ -llog
 
 #Create and Install libraries
 lib_LTLIBRARIES = libgps_utils_so.la
