loc-pla: Create Platform Library Abstraction layer
Defined PLA functions to enable gps libraries to call
platform-dependent library calls transparantly. Removed
fake files and replaced the fake function with defined
PLA functions.

CRs-fixed: 605817

Change-Id: I677f658001329a10ef9b49bd963631a83fb4c85f

--- a/core/Makefile.am
+++ b/core/Makefile.am
@@ -1,6 +1,6 @@
 AM_CFLAGS = -I./ \
             -I../utils \
-            -I../platform_lib_abstractions \
+            $(LOCPLA_CFLAGS) \
             -fno-short-enums
 
 libloc_core_la_h_sources = \
@@ -13,8 +13,7 @@ libloc_core_la_h_sources = \
            UlpProxyBase.h \
            gps_extended_c.h \
            gps_extended.h \
-           loc_core_log.h \
-           fake_sched_policy.h
+           loc_core_log.h
 
 libloc_core_la_c_sources = \
            MsgTask.cpp \
@@ -22,8 +21,7 @@ libloc_core_la_c_sources = \
            LocAdapterBase.cpp \
            ContextBase.cpp \
            LocDualContext.cpp \
-           loc_core_log.cpp \
-           fake_sched_policy.c
+           loc_core_log.cpp
 
 library_includedir = $(pkgincludedir)/core
 
@@ -41,7 +39,7 @@ libloc_core_la_LDFLAGS = -lpthread -shared -version-info 1:0:0
 libloc_core_la_CPPFLAGS = $(AM_CFLAGS) $(AM_CPPFLAGS)
 endif
 
-libloc_core_la_LIBADD = -lstdc++ -ldl ../utils/libgps_utils_so.la
+libloc_core_la_LIBADD = -lstdc++ -ldl $(LOCPLA_LIBS) ../utils/libgps_utils_so.la
 
 #Create and Install libraries
 lib_LTLIBRARIES = libloc_core.la
