INITRC: Add service poweroffhandler Add service poweroffhandler.
Add service poweroffhandler Add service poweroffhandler.

CRs-Fixed: 943280
Change-Id: I886c3488db61e41eea817d76390ef3220e6a0dcb

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1025,3 +1025,11 @@ service seemp_healthd /system/vendor/bin/seemp_healthd
 
 on charger
     setprop persist.sys.usb.config charging
+
+#add poweroffhandler
+service poweroffhandler /system/bin/poweroffhandler
+    class core
+    user media
+    group graphics audio
+    disabled
+    oneshot
