Fix compilation issues for m_master merge into oe_master
Fixed compilation issues for M upgrade

Change-Id: I602aa7c8a2db9682a1fe94b7ca892027281deec7

--- a/core/Makefile.am
+++ b/core/Makefile.am
@@ -1,10 +1,11 @@
 AM_CFLAGS = -I./ \
             -I../utils \
             $(LOCPLA_CFLAGS) \
+           -I$(WORKSPACE)/gps-noship/flp \
+            -D__func__=__PRETTY_FUNCTION__ \
             -fno-short-enums
 
 libloc_core_la_h_sources = \
-           MsgTask.h \
            LocApiBase.h \
            LocAdapterBase.h \
            ContextBase.h \
@@ -13,10 +14,10 @@ libloc_core_la_h_sources = \
            UlpProxyBase.h \
            gps_extended_c.h \
            gps_extended.h \
-           loc_core_log.h
+           loc_core_log.h \
+           LocAdapterProxyBase.h
 
 libloc_core_la_c_sources = \
-           MsgTask.cpp \
            LocApiBase.cpp \
            LocAdapterBase.cpp \
            ContextBase.cpp \
