--- a/platform_lib_abstractions/loc_pla/src/Makefile.am
+++ b/platform_lib_abstractions/loc_pla/src/Makefile.am
@@ -1,6 +1,7 @@
 AM_CFLAGS = \
      $(LOCSTUB_CFLAGS) \
      -I../include \
+     -D__func__=__PRETTY_FUNCTION__ \
      -fno-short-enums
 
 h_sources = \
