common: ZRAM, SWAP Disks creation
ZRAM Disk size - 512 MB. "init.qcom.zram.sh" is now deleted.

ZRAM disk creation is moved to "init.com.post_boot.sh" (at the
common Memory related configuratons) and is done only if
"ro.config.zram" is enabled.

SWAP Disk size - 200 MB (Created only for lower RAM ( < 1GB )
devices & only if "ro.config.swap" is enabled ).

Change-Id: I077d3bdf10e56d2c40f0057c95533cfb136a2ab8

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -328,6 +328,10 @@ on post-fs-data
     mkdir /data/misc/qti-logkit/socket-public/ 2750 system qcom_diag
     mkdir /data/misc/qti-logkit/logdata/ 2750 system shell
 
+    #Create SWAP related dirs
+    mkdir /data/system/swap 0770 root system
+    chmod 2770 /data/system/swap
+
 service iop /system/bin/iop
     class main
     user root
@@ -821,16 +825,9 @@ service wifi-crda /system/bin/sh /system/etc/init.crda.sh
    disabled
    oneshot
 
-service config-zram /system/bin/sh /system/etc/init.qcom.zram.sh
-   class late_start
-   user root
-   disabled
-   oneshot
-
 on property:sys.boot_completed=1
     start qcom-post-boot
     start qti-testscripts
-    start config-zram
 
 service atfwd /system/bin/ATFWD-daemon
     class late_start
