Revert "Fix compilation issues for m_master merge into oe_master".
This reverts commit f9c96d946df94dadef3aa310d0bd8eec72cae46f

Change-Id: I7b540247b246ea4caf710247d2c58b55515dae7c

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -14,24 +14,15 @@ libgps_utils_so_la_h_sources = \
         loc_cfg.h \
         loc_log.h \
         loc_target.h \
-        loc_timer.h \
-        MsgTask.h \
-        LocHeap.h \
-        LocThread.h \
-        LocTimer.h \
-        loc_misc_utils.h
+        loc_timer.h
 
 libgps_utils_so_la_c_sources = \
         linked_list.c \
         msg_q.c \
         loc_cfg.cpp \
         loc_log.cpp \
-        loc_target.cpp \
-        LocHeap.cpp \
-        LocTimer.cpp \
-        LocThread.cpp \
-        MsgTask.cpp \
-        loc_misc_utils.cpp
+        loc_timer.c \
+        loc_target.cpp
 
 library_includedir = $(pkgincludedir)/utils
 
