AGPS config inject can be configured out
a parameter can be added to gps.conf so as to prevent carrier
dependent AGPS configs to be injected to modem. This is mainly
for test purposes.

Change-Id: Ia053bf523329fe7c1abf0696b9bffcc6a7d56a53
CRs-Fixed: 998059

--- a/etc/gps.conf
+++ b/etc/gps.conf
@@ -123,3 +123,18 @@ LPPE_CP_TECHNOLOGY = 0
 # 0x1: DBH for LPPe UP
 # 0x2: WLAN AP Measurements for LPPe UP
 LPPE_UP_TECHNOLOGY = 0
+
+##################################################
+# AGPS_CONFIG_INJECT
+##################################################
+# enable/disable injection of AGPS configurations:
+#     SUPL_VER
+#     SUPL_HOST
+#     SUPL_PORT
+#     C2K_HOST
+#     C2K_PORT
+#     LPP_PROFILE
+#     A_GLONASS_POS_PROTOCOL_SELECT
+# 0: disable
+# 1: enable
+AGPS_CONFIG_INJECT = 1
