init.qcom.rc: create a new dir for netmgr logs
Create a new directory /data/misc/netmgr for saving
netmgr logs into a file

Change-Id: Ia1954d3cda43a4ef0120fb962502ef1f2d17039d
CRs-Fixed: 1006760

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -215,6 +215,10 @@ on post-fs-data
     mkdir /data/misc/port_bridge 0770 radio radio
     chmod 0770 /data/misc/port_bridge
 
+    #create netmgr log dir
+    mkdir /data/misc/netmgr 0770 radio radio
+    chmod 0770 /data/misc/netmgr
+
     # Create the directories used by CnE subsystem
     mkdir /data/connectivity 0771 system system
     chown system system /data/connectivity
