Add tcpdump permissions for qti-logkit
Adding tcpdump permissions for LK3

Change-Id: I0d47bda2fc63fc94a782b071260087dd9cdb1165
CRs-Fixed: 1035277

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1076,7 +1076,7 @@ service LKCore-dbg /system/vendor/bin/LKCore
     oneshot
     disabled
     user root
-    group root system log qcom_diag
+    group root system log qcom_diag net_raw
 
 # service for USER
 service LKCore-rel /system/vendor/bin/LKCore
