Add perfd to readproc group
Adding perfd to readproc group, to allow
read/write access on /proc node.

Change-Id: Iab12fa67239ea831362b18d2892c4f77670a9cad

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -343,6 +343,7 @@ on post-fs-data
 service perfd /system/vendor/bin/perfd
    class main
    user root
+   group root readproc
    disabled
    socket perfd seqpacket 0666 root system
 
