Change the permission for persist
Some of the directories under persist need to be accessed by
daemons which are running with root access. Currently only
system is allowed to access or create files under /persist.
Change the permission for persist to allow root to access and
create files.

CRs-Fixed: 1018233
Change-Id: Icbdbf5ddc329ff9627f6bcf79445b98aae942956

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -36,7 +36,7 @@ on early-init
 
 on init
     # Set permissions for persist partition
-    mkdir /persist 0771 system system
+    mkdir /persist 0771 root system
 
     # Support legacy paths
     symlink /sdcard /mnt/sdcard
@@ -245,7 +245,7 @@ on post-fs-data
 
     # Mounting of persist is moved to 'on emmc-fs' and 'on fs' sections
     # We chown/chmod /persist again so because mount is run as root + defaults
-    chown system system /persist
+    chown root system /persist
     chmod 0771 /persist
     chown system system /persist/WCNSS_qcom_wlan_nv.bin
     chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
