Add logdumpd service to dump logs to logdump partition
This change will add a new service - logdumpd, that
starts on bootup only for userdebug non-perf builds,
and would be continuously dumping logs to 'logdump' partition.

Change-Id: I01ae67f06a143233e8ef854608f43df3141e9df5

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1138,3 +1138,14 @@ service poweroffhandler /system/bin/poweroffhandler
     group graphics audio
     disabled
     oneshot
+
+# Logcat dump daemon, dumps logs to logdump partition
+service logdumpd /system/bin/logcat -b all -v threadtime -D -w /dev/block/bootdevice/by-name/logdump
+    class core
+    writepid /dev/cpuset/system-background/tasks
+    seclabel u:r:logdumpd:s0
+    disabled
+
+# Logdumpd is enabled only for userdebug non-perf build
+on property:ro.logdumpd.enabled=1
+    start logdumpd
