DPM: add readproc to supplementary group for dpmd
added readproc supplementary group for dpmd to allow
proc/pid/ access

Change-Id: I9d77968adedbba18e9ad0dfde4171833fe33eda3
CRs-Fixed: 997493

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -467,6 +467,7 @@ service cnd /system/bin/cnd
 service dpmd /system/bin/dpmd
     class late_start
     socket dpmd stream 660 root system
+    group system readproc
 
 service irsc_util /system/bin/irsc_util "/etc/sec_config"
     class core
