cnss_diag: Update the requisite user / group preferences
This commit adds / updates the required user and group
preferences.

CRs-Fixed: 1047562
Change-Id: I74ed7fcbd73cddf06895e70234892d939a5b4ac4

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -788,8 +788,8 @@ on property:wifi.ftmd.load=true
 
 service cnss_diag /system/bin/cnss_diag -q -f
     class main
-    user root
-    group root
+    user system
+    group system wifi inet net_admin sdcard_rw media_rw diag
     oneshot
 
 service cnss-daemon /system/bin/cnss-daemon -n -l
