init.qcom.rc: Start cnss-daemon with system privilege
Start cnss-daemon with system level permission. Add
required group as part of init script for cnss-daemon
service.

Change-Id: Icc685e9c2734ff0552d5912eb18471456774fcc8
CRs-Fixed: 1024366

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -794,6 +794,8 @@ service cnss_diag /system/bin/cnss_diag -q -f
 
 service cnss-daemon /system/bin/cnss-daemon -n -l
     class late_start
+    user system
+    group system inet net_admin wifi
 
 service dhcpcd_bt-pan /system/bin/dhcpcd -BKLG
     class late_start
