ueventd: add permission for wdsp_glink device node
Add permission for wdsp_glink device node to acess by
audio server.

Change-Id: Ie8554ffa4448efbbd4a59c3d85c3a979e133a1f3

--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -134,6 +134,7 @@
 /dev/sdsprpc-smd          0660   system     system
 
 #permissions for audio
+/dev/wcd-dsp-glink        0660   system     audio
 /dev/audio_slimslave      0660   system     audio
 /dev/msm_qcelp            0660   system     audio
 /dev/msm_evrc             0660   system     audio
