ueventd.qcom.rc: enable access permission for laser sensor
Laser sensor driver uses sysfs input nodes to configure and
access laser data. Add permission for system server to
access those nodes.

CRs-fixed: 1045454

Change-Id: Ia6e8d641f05078834a2a5ed31a0843bc8deb196b

--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -212,6 +212,10 @@
 /sys/devices/soc/78b7000.i2c/i2c-3/3-004b/input/input*    secure_touch         0440   system  drmrpc
 /sys/devices/soc/78b7000.i2c/i2c-3/3-004b/input/input*    secure_touch_enable  0660   system  drmrpc
 
+# laser sensor access
+/sys/devices/virtual/input/input*                   enable_ps_sensor 0660  system   system
+/sys/devices/virtual/input/input*                   set_delay_ms     0660  system   system
+
 # vm_bms
 /dev/vm_bms               0660   system     system
 /dev/battery_data         0660   system     system
