FM :Add net_admin capability for fmhalservice
Fmhalservice runs in bluetooth context and does chip
power ON/OFF controls. This process includes writing
sysfs entry to modify state of device to notify
rfkill driver to perform  power ON/OFF operations.
Writing rfkill sysfs class driver entry need capability
net_admin along with bluetooth uid.

Change-Id: I6b761fad03fe1a9886776a61ebef4414ae8a53ab

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -510,10 +510,11 @@ service start_hci_filter /system/bin/wcnss_filter
     group bluetooth qcom_diag system wakelock
     disabled
 
+#net_admin capability needed to write rfkill sysfs entry
 service fmhal_service /system/bin/fmhal_service
     class late_start
     user bluetooth
-    group bluetooth net_bt_admin
+    group bluetooth net_bt_admin net_admin
     disabled
 
 service config_bt_addr /system/bin/btnvtool -O
