init.qcom.rc: Add rule of stop cnss-daemon during device shutdown
Stop cnss-daemon when device shutdown. This is required by
peripheral manager as cnss-daemon vote for modem when service is
started. It needs to release vote when device shutdown.

Change-Id: I48c8bcab673280ab5f725ffdb4625994f2078b8f
CRs-Fixed: 1051868

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -800,6 +800,9 @@ service cnss-daemon /system/bin/cnss-daemon -n -l
     user system
     group system inet net_admin wifi
 
+on property:sys.shutdown.requested=*
+    stop cnss-daemon
+
 service dhcpcd_bt-pan /system/bin/dhcpcd -BKLG
     class late_start
     disabled
