WLAN: MSM8998: Enable SoftAp
Enable SoftAp.

Change-Id: Ia1212b314fa960fbddeecdc3e0e8d26aa71b37ee
CRs-Fixed: 2007395

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -935,7 +935,7 @@ service atfwd /system/bin/ATFWD-daemon
     user system
     group system radio
 
-service hostapd /system/bin/hostapd -dd /data/hostapd/hostapd.conf
+service hostapd /system/bin/hostapd -dd /data/misc/wifi/hostapd.conf
     class late_start
     user root
     group root
