--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -195,6 +195,8 @@ on boot
     chown root system /sys/kernel/dload/emmc_dload
     chmod 0660 /sys/kernel/dload/emmc_dload
 
+    chown system system /sys/class/backlight/panel0-backlight/brightness
+
 # msm specific files that need to be created on /data
 on post-fs-data
     #Create directories for Fingerprint
